<resources>
    <string name="app_name">一点甜</string>
    <string name="main_person">个人</string>
    <string name="main_shop">商城</string>
    <string name="main_home">首页</string>
    <string name="activity_person_like">收藏清单</string>
    <string name="activity_person_settings">设置</string>
    <string name="activity_person_record">发帖记录</string>
    <string name="activity_person_default_username">未命名</string>
    <string name="activity_person_default_signature">添加个人描述,可让大家更好地认识你哦~</string>
    <string name="activity_person_sign_out">登录体验更多功能</string>
    <string name="activity_person_sign_in">点击登录</string>
    <string name="activity_person_follow">关注</string>
    <string name="activity_person_get_like">获赞</string>
    <string name="activity_person_edit">编辑个人资料</string>
    <string name="activity_person_dialog_title">用哪种方式打开</string>
    <string name="activity_post_send">发表</string>
    <string name="activity_post_location">所在位置</string>
    <string name="activity_post_public">谁可以看</string>
    <string name="activity_post_topic">参与话题</string>
    <string name="activity_post_hint">分享你的甜品吧</string>
    <string name="activity_post_success">发表成功</string>
    <string name="activity_post_fail">发表失败</string>
    <string name="activity_post_error">内容和图片不能同时为空</string>
    <string name="activity_post_dialog_title">发表中</string>
    <string name="activity_post_dialog_content">请等待</string>
    <string name="activity_settings_title">设置</string>
    <string name="activity_settings_user_msg">个人资料</string>
    <string name="activity_settings_account_and_security">账号与安全</string>
    <string name="activity_settings_certification">申请认证</string>
    <string name="activity_settings_certification_success">申请认证(已认证)</string>
    <string name="activity_settings_about">关于一点甜</string>
    <string name="activity_settings_feedback">意见反馈</string>
    <string name="activity_settings_sign_out">退出</string>
    <string name="activity_login_title">登录</string>
    <string name="activity_login_number">昵称/邮箱</string>
    <string name="activity_login_password">密码</string>
    <string name="activity_login_sign_in">立即登陆</string>
    <string name="activity_login_forget">忘记密码</string>
    <string name="activity_login_register">注册新账号</string>
    <string name="activity_login_no_number">您忘了填写账号哦</string>
    <string name="activity_login_no_password">您忘了填写密码哦</string>
    <string name="activity_login_fail">登录失败，请检查账号或密码是否有误</string>
    <string name="activity_login_success">登录成功，精彩即将呈现</string>
    <string name="activity_login_by_phone">短信验证码登录</string>
    <string name="activity_register_title">注册</string>
    <string name="activity_register_name">昵称</string>
    <string name="activity_register_password">密码</string>
    <string name="activity_register_sign_in">立即注册</string>
    <string name="activity_register_prompt">密码不少于6位</string>
    <string name="activity_register_no_name">昵称不可为空呀</string>
    <string name="activity_register_no_password">密码不可为空呀</string>
    <string name="activity_register_success">注册成功，请登录</string>
    <string name="activity_register_fail">注册失败，请稍后重试</string>
    <string name="activity_register_with_phone">手机短信一键注册</string>
    <string name="activity_register_with_phone_title">手机短信注册</string>
    <string name="activity_register_with_phone_phone">手机号码</string>
    <string name="activity_register_with_phone_code">短信验证码</string>
    <string name="activity_register_with_phone_get_code">获取验证码</string>
    <string name="activity_register_with_phone_send_success">验证码已发送，请注意查收</string>
    <string name="activity_register_with_phone_send_fail">验证码发送失败，请检查手机号码是否有误</string>
    <string name="activity_register_with_phone_no_phone">手机号码不可为空</string>
    <string name="activity_register_with_phone_no_code">请填写短信验证码</string>
    <string name="activity_register_with_phone_sign_in">注册并登录</string>
    <string name="activity_register_with_phone_success">一键注册成功，精彩即将呈现</string>
    <string name="activity_register_with_phone_fail">注册失败，请检查手机号码或短信验证码是否有误</string>
    <string name="activity_register_with_phone_exist_phone">该手机号已经被注册</string>
    <string name="activity_login_with_phone_title">手机短信登录</string>
    <string name="activity_login_with_phone_sign_in">立即登录</string>
    <string name="activity_login_with_phone_success">登录成功，精彩即将呈现</string>
    <string name="activity_login_with_phone_fail">登录失败，请检查手机号码或短信验证码是否有误</string>
    <string name="activity_login_with_phone_no_exist_phone">该手机号还未注册</string>
    <string name="activity_forget_title">重置密码</string>
    <string name="activity_forget_number">手机号</string>
    <string name="activity_forget_reset">重置密码</string>
    <string name="activity_forget_new_password">新密码</string>
    <string name="activity_forget_no_new_password">新密码不可为空</string>
    <string name="activity_forget_reset_success">重置密码成功，请重新登录</string>
    <string name="activity_forget_reset_fail">重置密码失败，请稍后重试</string>
    <string name="activity_home_search">请输入您想要搜索的内容</string>
    <string name="activity_account_security_title">帐号与安全</string>
    <string name="activity_account_security_phone">手机号</string>
    <string name="activity_account_security_password">修改密码</string>
    <string name="activity_account_security_email">邮箱账号</string>
    <string name="activity_account_security_no">未设置</string>
    <string name="activity_bind_phone_title">绑定手机</string>
    <string name="activity_bind_phone_bind">立即绑定</string>
    <string name="activity_bind_phone_exist_phone">该手机号已经被绑定</string>
    <string name="activity_bind_phone_code_error">验证码错误</string>
    <string name="activity_bind_phone_success">绑定手机号码成功</string>
    <string name="activity_bind_phone_fail">绑定手机号码失败</string>
    <string name="activity_bind_email_title">绑定邮箱</string>
    <string name="activity_bind_email_email">邮箱</string>
    <string name="activity_bind_email_bind">立即绑定</string>
    <string name="activity_bind_email_no_email">请填写您要进行绑定的邮箱</string>
    <string name="activity_bind_email_exist_email">该邮箱已经被绑定</string>
    <string name="activity_bind_email_success">验证邮箱已发送成功，请及时完成验证</string>
    <string name="activity_bind_email_fail">验证邮箱发送失败，请稍后重试</string>
    <string name="activity_change_password_title">修改密码</string>
    <string name="activity_change_password_old">旧密码</string>
    <string name="activity_change_password_new">新密码</string>
    <string name="activity_change_password_change">立即修改</string>
    <string name="activity_change_password_no_old_password">请填写旧密码</string>
    <string name="activity_change_password_no_new_password">请填写新密码</string>
    <string name="activity_change_password_error">新旧密码不可相同</string>
    <string name="activity_change_password_success">修改密码成功，请重新登录</string>
    <string name="activity_change_password_fail">修改密码失败，请检查旧密码是否正确</string>
    <string name="activity_feedback_title">意见反馈</string>
    <string name="activity_feedback_prompt">问题/建议</string>
    <string name="activity_feedback_content">请在此输入您的意见反馈</string>
    <string name="activity_feedback_email">请输入您的邮箱方便工作人员后续联系</string>
    <string name="activity_feedback_submit">提交</string>
    <string name="activity_feedback_error">请将信息填写完整</string>
    <string name="activity_feedback_email_error">邮箱格式不正确</string>
    <string name="activity_feedback_success">提交成功</string>
    <string name="activity_feedback_fail">提交失败，请稍后重试</string>
    <string name="activity_user_msg_title">个人资料</string>
    <string name="activity_user_msg_name">昵称</string>
    <string name="activity_user_msg_gender">性别</string>
    <string name="activity_user_msg_male">男</string>
    <string name="activity_user_msg_female">女</string>
    <string name="activity_user_msg_address">常住地</string>
    <string name="activity_user_msg_signature">个性签名</string>
    <string name="activity_user_msg_no">未填写</string>
    <string name="activity_user_msg_avatar">修改头像</string>
    <string name="activity_user_msg_identity">身份认证</string>
    <string name="activity_user_msg_apply">点击申请</string>
    <string name="activity_user_msg_success">修改成功</string>
    <string name="activity_user_msg_fail">出错啦，刚才的修改已丢失T T</string>
    <string name="activity_user_msg_avatar_success">修改头像成功</string>
    <string name="activity_user_msg_avatar_fail">修改头像失败T T</string>
    <string name="activity_about_title">关于一点甜</string>
    <string name="activity_about_introduce">功能介绍</string>
    <string name="activity_about_use">使用手册</string>
    <string name="activity_about_version">Version 1.0.1</string>
    <string name="activity_post_detail_title">正文</string>
    <string name="activity_post_detail_comment">评论</string>
    <string name="activity_post_detail_like">收藏</string>
    <string name="activity_post_detail_share">分享</string>
    <string name="activity_post_detail_follow_fail">关注失败</string>
    <string name="activity_post_detail_follow_success">关注成功</string>
    <string name="activity_post_detail_cancel_follow_fail">取消关注失败</string>
    <string name="activity_post_detail_cancel_follow_success">取消关注成功</string>
    <string name="activity_post_detail_followed">已关注</string>
    <string name="activity_post_detail_collect_fail">收藏失败</string>
    <string name="activity_post_detail_collect_success">收藏成功</string>
    <string name="activity_post_detail_collect_error">悄悄地收藏了该帖子</string>
    <string name="activity_post_detail_collected">已收藏</string>
    <string name="activity_post_detail_cancel_collect_fail">取消收藏失败</string>
    <string name="activity_post_detail_cancel_collect_success">取消收藏成功</string>
    <string name="activity_post_detail_cancel_collect_error">悄悄地取消收藏了</string>
    <string name="activity_post_detail_comment_fail">评论失败</string>
    <string name="activity_post_detail_comment_success">评论成功</string>
    <string name="dialog_normal_positive">确定</string>
    <string name="dialog_normal_negative">取消</string>
    <string name="dialog_quit_title">退出提示</string>
    <string name="dialog_quit_content">你确定要退出该账号嘛？</string>
    <string name="dialog_quit_toast">已退出当前账号，请重新登陆</string>
    <string name="toast_permission_deny">部分权限获取失败，正常功能受到影响</string>
    <string name="toast_permission_read">请授予读取存储权限</string>
    <string name="toast_permission_write">请授予相机和读写权限</string>
    <string name="toast_permission_error">设备没有sdcard！</string>
    <string name="activity_shop_bake">烘培</string>
    <string name="activity_shop_sugar">糖水</string>
    <string name="activity_shop_fruit">水果</string>
    <string name="activity_shop_drink">饮品</string>
    <string name="activity_shop_snack">零食</string>
    <string name="activity_shop_seasoning">调料</string>
    <string name="activity_shop_box">礼盒</string>
    <string name="activity_shop_utensils">器皿</string>
    <string name="activity_shop_recommend">为你推荐</string>
    <string name="activity_shop_get_more">详情</string>
    <string name="activity_shop_sale">已售 </string>
    <string name="activity_shop_price">￥ </string>
    <string name="activity_shop_tag"> | </string>
    <string name="activity_shop_error">还没有通过认证成为卖家，不能发布商品</string>
    <string name="activity_product_detail_title">商品详情</string>
    <string name="activity_product_detail_sale">在售商品</string>
    <string name="activity_product_detail_sum">件</string>
    <string name="activity_product_detail_shop">进店</string>
    <string name="activity_product_detail_buy">立即购买</string>
    <string name="activity_product_detail_add_car">加入购物车</string>
    <string name="activity_product_detail_share">分享商品</string>
    <string name="activity_edit_order_title">填写订单</string>
    <string name="activity_edit_order_submit">提交订单</string>
    <string name="activity_edit_order_phone">联系方式：</string>
    <string name="activity_edit_order_address">收货地址：</string>
    <string name="activity_edit_order_consignee">收货人：</string>
    <string name="activity_edit_order_words">留言</string>
    <string name="activity_edit_order_phone_hint">请填写联系方式</string>
    <string name="activity_edit_order_address_hint">请填写收货地址</string>
    <string name="activity_edit_order_consignee_hint">请填写收货人</string>
    <string name="activity_edit_order_words_hint">请填写留言</string>
</resources>