<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/number_forget_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_input_et"
        android:hint="@string/activity_login_number"
        android:padding="10dp"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_register_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_input_et"
        android:hint="@string/activity_login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/number_forget_editText" />

    <Button
        android:id="@+id/sign_in_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/bg_post_button"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/activity_login_sign_in"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/password_register_editText" />

    <TextView
        android:id="@+id/forget_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/activity_login_forget"
        android:textColor="@color/text_color"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_register_button" />

    <TextView
        android:id="@+id/register_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/activity_login_register"
        android:textColor="@color/colorPrimary"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_register_button" />

</android.support.constraint.ConstraintLayout>